--- a/index.html
+++ b/index.html
@@ -68,18 +68,28 @@
           <img class="d-block w-100" src="aa.jpeg" alt="First slide">
         </div>
         <div class="carousel-item">
+          <img class="d-block w-100" src="sn.jpeg" alt="fifth slide">
+        </div>
+        <div class="carousel-item">
           <img class="d-block w-100" src="ah.jpeg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="roshanangry.jpeg" alt="Sixth slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="asad.jpeg" alt="Third slide">
         </div>
         <div class="carousel-item">
+          <img class="d-block w-100" src="mohansurprised.jpeg" alt="Sixth slide">
+        </div>
+        <div class="carousel-item">
           <img class="d-block w-100" src="sh.jpeg" alt="fourth slide">
-        </div><div class="carousel-item">
-          <img class="d-block w-100" src="sn.jpeg" alt="fifth slide">
-        </div><div class="carousel-item">
+        </div>
+        <div class="carousel-item">
           <img class="d-block w-100" src="ss.jpeg" alt="Sixth slide">
         </div>
+        
+        
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -97,8 +107,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="bitmoji1.JPG" width="100%">
-          <h2>About this page</h2>
+          <img src="display2.jpg" width="100%">
+          <h2>About the Project</h2>
           <p class="lead">The main idea is to capture the human face through live web proctoring and recognize the facial expressions stimulated in the face and describe the age, gender and create and display an emoji according to the expression.</p>
           <ul>
             <li>Face Detection</li>
@@ -115,7 +125,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="bitmoji2.JPG" width="105%">
+          <img src="display1.jpg" width="105%">
           <h2>Description of the Project</h2>
           <ul>
           <li>In Xmoji(expression to emoji) project we use convolutional neural networks to detect the image and generate the suitable emoji of the human being captured through live web cam feed.</li>
