homepage pic edited

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
   <header class="bg-light text-black">
     <div class="container text-center">
-      <img src="bitmoji3.jpg">
-      <h1>Welcome to Xmoji</h1>
-      <p class="lead">Design your emojis with your expressions  </p>
+      <img src="display0.jpg" width="100%">
+      <h1>Xmoji</h1>
+      <p class="lead">Expression to Emoji</p>
     </div>
   </header>
 <br>
